Some fixes to pass sonar quality gate